--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ requests==2.31.0
 rich==13.5.3
 scikit-learn==1.3.1
 scipy==1.11.3
+seaborn==0.13.2
 sentry-sdk==1.31.0
 setproctitle==1.3.2
 six==1.16.0
